// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SelectCourtFormComponent should create 1`] = `
<select-court-form
  JurisdictionType={[Function Object]}
  courtCentre={[Function Function]}
  courtCentreChange={[Function OutputEmitterRef]}
  errors={[Function OutputEmitterRef]}
  form={[Function Function]}
  jurisdiction={[Function Function]}
  jurisdictionCode={[Function Function]}
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    data-test-id="select-court-form"
    novalidate=""
    pdk-form=""
  >
    <select-jurisdiction>
      <pdk-form-field
        label="Select jurisdiction"
        labeltype="small"
      >
        <pdk-form-group
          class="pdk-form-group"
        >
          <fieldset
            class="govuk-fieldset"
            pdk-fieldset=""
          >
            <legend
              class="govuk-fieldset__legend govuk-fieldset__legend--s"
            >
               Select jurisdiction 
            </legend>
            <pdk-radio-group
              class="ng-untouched ng-pristine ng-invalid"
              name="jurisdictionType"
              required=""
            >
              <div
                class="govuk-radios"
              >
                <pdk-radio-button>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="pdk-radio-GENERATED_ID"
                      name="pdk-radio-group-GENERATED_ID"
                      type="radio"
                      value="MAGISTRATES"
                    />
                    <label
                      class="govuk-radios__label govuk-label"
                      for="pdk-radio-GENERATED_ID"
                      pdk-label=""
                    >
                      Magistrates' Court 
                    </label>
                  </div>
                </pdk-radio-button>
                <pdk-radio-conditional>
                  <div
                    class="govuk-radios__conditional"
                  >
                  </div>
                </pdk-radio-conditional>
                <pdk-radio-button>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="pdk-radio-GENERATED_ID"
                      name="pdk-radio-group-GENERATED_ID"
                      type="radio"
                      value="CROWN"
                    />
                    <label
                      class="govuk-radios__label govuk-label"
                      for="pdk-radio-GENERATED_ID"
                      pdk-label=""
                    >
                      Crown Court 
                    </label>
                  </div>
                </pdk-radio-button>
              </div>
            </pdk-radio-group>
          </fieldset>
        </pdk-form-group>
      </pdk-form-field>
    </select-jurisdiction>
    <div
      class="actions"
    >
      <pdk-form-group
        class="pdk-form-group"
      >
        <button
          class="govuk-!-margin-bottom-0 govuk-button"
          data-test-id="select-court"
          pdk-button=""
          pdk-margin-bottom="0"
          type="submit"
        >
           Continue 
        </button>
      </pdk-form-group>
      <div
        class="govuk-!-margin-left-4"
        pdk-margin-left="4"
      >
        <a
          class="govuk-link"
          data-test-id="clear-court"
          href="javascript:void(0)"
          pdk-link=""
        >
          Clear
        </a>
      </div>
    </div>
  </form>
</select-court-form>
`;

exports[`SelectCourtFormComponent should create with crown jurisdiction selected 1`] = `
<select-court-form
  JurisdictionType={[Function Object]}
  courtCentre={[Function Function]}
  courtCentreChange={[Function OutputEmitterRef]}
  errors={[Function OutputEmitterRef]}
  form={[Function Function]}
  jurisdiction={[Function Function]}
  jurisdictionCode={[Function Function]}
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    data-test-id="select-court-form"
    novalidate=""
    pdk-form=""
  >
    <select-jurisdiction>
      <pdk-form-field
        label="Select jurisdiction"
        labeltype="small"
      >
        <pdk-form-group
          class="pdk-form-group"
        >
          <fieldset
            class="govuk-fieldset"
            pdk-fieldset=""
          >
            <legend
              class="govuk-fieldset__legend govuk-fieldset__legend--s"
            >
               Select jurisdiction 
            </legend>
            <pdk-radio-group
              class="ng-untouched ng-pristine ng-invalid"
              name="jurisdictionType"
              required=""
            >
              <div
                class="govuk-radios"
              >
                <pdk-radio-button>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="pdk-radio-GENERATED_ID"
                      name="pdk-radio-group-GENERATED_ID"
                      type="radio"
                      value="MAGISTRATES"
                    />
                    <label
                      class="govuk-radios__label govuk-label"
                      for="pdk-radio-GENERATED_ID"
                      pdk-label=""
                    >
                      Magistrates' Court 
                    </label>
                  </div>
                </pdk-radio-button>
                <pdk-radio-button>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="pdk-radio-GENERATED_ID"
                      name="pdk-radio-group-GENERATED_ID"
                      type="radio"
                      value="CROWN"
                    />
                    <label
                      class="govuk-radios__label govuk-label"
                      for="pdk-radio-GENERATED_ID"
                      pdk-label=""
                    >
                      Crown Court 
                    </label>
                  </div>
                </pdk-radio-button>
                <pdk-radio-conditional>
                  <div
                    class="govuk-radios__conditional"
                  >
                    <div
                      crown-court=""
                    >
                      <pdk-form-field
                        label="Select court"
                        labeltype="small"
                      >
                        <pdk-form-group
                          class="pdk-form-group"
                        >
                          <label
                            class="govuk-label govuk-label--s"
                            for="courtCentre"
                          >
                             Select court 
                          </label>
                          <cpp-organisation-unit-autosuggest
                            class="ng-untouched ng-pristine ng-valid"
                            data-role="allocate-court-centre-input"
                            name="courtCentre"
                            required=""
                          >
                            <pdk-autosuggest-lite>
                              <pdk-autosuggest
                                highlightcolor="blue"
                              >
                                <pdk-interaction-container>
                                  <div>
                                    <div
                                      class="pdk-autosuggest"
                                    >
                                      <input
                                        aria-autocomplete="list"
                                        aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                                        aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                                        aria-expanded="false"
                                        autocomplete="off"
                                        class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                                        id="courtCentre"
                                        role="combobox"
                                        type="text"
                                      />
                                      <span
                                        class="govuk-visually-hidden"
                                        id="pdk-autosuggest__instructions-GENERATED_ID"
                                        pdk-visually-hidden=""
                                      >
                                         When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                                      </span>
                                      <span
                                        aria-live="polite"
                                        class="govuk-visually-hidden"
                                        pdk-visually-hidden=""
                                        role="status"
                                      >
                                      </span>
                                      <div
                                        class="pdk-autosuggest__suggestions-container"
                                        id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                                      >
                                      </div>
                                    </div>
                                  </div>
                                </pdk-interaction-container>
                              </pdk-autosuggest>
                            </pdk-autosuggest-lite>
                          </cpp-organisation-unit-autosuggest>
                        </pdk-form-group>
                      </pdk-form-field>
                    </div>
                  </div>
                </pdk-radio-conditional>
              </div>
            </pdk-radio-group>
          </fieldset>
        </pdk-form-group>
      </pdk-form-field>
    </select-jurisdiction>
    <div
      class="actions"
    >
      <pdk-form-group
        class="pdk-form-group"
      >
        <button
          class="govuk-!-margin-bottom-0 govuk-button"
          data-test-id="select-court"
          pdk-button=""
          pdk-margin-bottom="0"
          type="submit"
        >
           Continue 
        </button>
      </pdk-form-group>
      <div
        class="govuk-!-margin-left-4"
        pdk-margin-left="4"
      >
        <a
          class="govuk-link"
          data-test-id="clear-court"
          href="javascript:void(0)"
          pdk-link=""
        >
          Clear
        </a>
      </div>
    </div>
  </form>
</select-court-form>
`;

exports[`SelectCourtFormComponent should create with magistrates jurisdiction selected 1`] = `
<select-court-form
  JurisdictionType={[Function Object]}
  courtCentre={[Function Function]}
  courtCentreChange={[Function OutputEmitterRef]}
  errors={[Function OutputEmitterRef]}
  form={[Function Function]}
  jurisdiction={[Function Function]}
  jurisdictionCode={[Function Function]}
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    data-test-id="select-court-form"
    novalidate=""
    pdk-form=""
  >
    <select-jurisdiction>
      <pdk-form-field
        label="Select jurisdiction"
        labeltype="small"
      >
        <pdk-form-group
          class="pdk-form-group"
        >
          <fieldset
            class="govuk-fieldset"
            pdk-fieldset=""
          >
            <legend
              class="govuk-fieldset__legend govuk-fieldset__legend--s"
            >
               Select jurisdiction 
            </legend>
            <pdk-radio-group
              class="ng-untouched ng-pristine ng-invalid"
              name="jurisdictionType"
              required=""
            >
              <div
                class="govuk-radios"
              >
                <pdk-radio-button>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="pdk-radio-GENERATED_ID"
                      name="pdk-radio-group-GENERATED_ID"
                      type="radio"
                      value="MAGISTRATES"
                    />
                    <label
                      class="govuk-radios__label govuk-label"
                      for="pdk-radio-GENERATED_ID"
                      pdk-label=""
                    >
                      Magistrates' Court 
                    </label>
                  </div>
                </pdk-radio-button>
                <pdk-radio-conditional>
                  <div
                    class="govuk-radios__conditional"
                  >
                    <div
                      magistrates-court=""
                    >
                      <pdk-form-field
                        label="Select court"
                        labeltype="small"
                      >
                        <pdk-form-group
                          class="pdk-form-group"
                        >
                          <label
                            class="govuk-label govuk-label--s"
                            for="courtCentre"
                          >
                             Select court 
                          </label>
                          <cpp-organisation-unit-autosuggest
                            class="ng-untouched ng-pristine ng-valid"
                            data-role="allocate-court-centre-input"
                            name="courtCentre"
                            required=""
                          >
                            <pdk-autosuggest-lite>
                              <pdk-autosuggest
                                highlightcolor="blue"
                              >
                                <pdk-interaction-container>
                                  <div>
                                    <div
                                      class="pdk-autosuggest"
                                    >
                                      <input
                                        aria-autocomplete="list"
                                        aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                                        aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                                        aria-expanded="false"
                                        autocomplete="off"
                                        class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                                        id="courtCentre"
                                        role="combobox"
                                        type="text"
                                      />
                                      <span
                                        class="govuk-visually-hidden"
                                        id="pdk-autosuggest__instructions-GENERATED_ID"
                                        pdk-visually-hidden=""
                                      >
                                         When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                                      </span>
                                      <span
                                        aria-live="polite"
                                        class="govuk-visually-hidden"
                                        pdk-visually-hidden=""
                                        role="status"
                                      >
                                      </span>
                                      <div
                                        class="pdk-autosuggest__suggestions-container"
                                        id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                                      >
                                      </div>
                                    </div>
                                  </div>
                                </pdk-interaction-container>
                              </pdk-autosuggest>
                            </pdk-autosuggest-lite>
                          </cpp-organisation-unit-autosuggest>
                        </pdk-form-group>
                      </pdk-form-field>
                    </div>
                  </div>
                </pdk-radio-conditional>
                <pdk-radio-button>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="pdk-radio-GENERATED_ID"
                      name="pdk-radio-group-GENERATED_ID"
                      type="radio"
                      value="CROWN"
                    />
                    <label
                      class="govuk-radios__label govuk-label"
                      for="pdk-radio-GENERATED_ID"
                      pdk-label=""
                    >
                      Crown Court 
                    </label>
                  </div>
                </pdk-radio-button>
              </div>
            </pdk-radio-group>
          </fieldset>
        </pdk-form-group>
      </pdk-form-field>
    </select-jurisdiction>
    <div
      class="actions"
    >
      <pdk-form-group
        class="pdk-form-group"
      >
        <button
          class="govuk-!-margin-bottom-0 govuk-button"
          data-test-id="select-court"
          pdk-button=""
          pdk-margin-bottom="0"
          type="submit"
        >
           Continue 
        </button>
      </pdk-form-group>
      <div
        class="govuk-!-margin-left-4"
        pdk-margin-left="4"
      >
        <a
          class="govuk-link"
          data-test-id="clear-court"
          href="javascript:void(0)"
          pdk-link=""
        >
          Clear
        </a>
      </div>
    </div>
  </form>
</select-court-form>
`;

exports[`SelectCourtFormComponent should render with crown jurisdiction selected 1`] = `
<select-court-form
  JurisdictionType={[Function Object]}
  courtCentre={[Function Function]}
  courtCentreChange={[Function OutputEmitterRef]}
  errors={[Function OutputEmitterRef]}
  form={[Function Function]}
  jurisdiction={[Function Function]}
  jurisdictionCode={[Function Function]}
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    data-test-id="select-court-form"
    novalidate=""
    pdk-form=""
  >
    <select-jurisdiction>
      <pdk-form-field
        label="Select jurisdiction"
        labeltype="small"
      >
        <pdk-form-group
          class="pdk-form-group"
        >
          <fieldset
            class="govuk-fieldset"
            pdk-fieldset=""
          >
            <legend
              class="govuk-fieldset__legend govuk-fieldset__legend--s"
            >
               Select jurisdiction 
            </legend>
            <pdk-radio-group
              class="ng-untouched ng-pristine ng-invalid"
              name="jurisdictionType"
              required=""
            >
              <div
                class="govuk-radios"
              >
                <pdk-radio-button>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="pdk-radio-GENERATED_ID"
                      name="pdk-radio-group-GENERATED_ID"
                      type="radio"
                      value="MAGISTRATES"
                    />
                    <label
                      class="govuk-radios__label govuk-label"
                      for="pdk-radio-GENERATED_ID"
                      pdk-label=""
                    >
                      Magistrates' Court 
                    </label>
                  </div>
                </pdk-radio-button>
                <pdk-radio-button>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="pdk-radio-GENERATED_ID"
                      name="pdk-radio-group-GENERATED_ID"
                      type="radio"
                      value="CROWN"
                    />
                    <label
                      class="govuk-radios__label govuk-label"
                      for="pdk-radio-GENERATED_ID"
                      pdk-label=""
                    >
                      Crown Court 
                    </label>
                  </div>
                </pdk-radio-button>
                <pdk-radio-conditional>
                  <div
                    class="govuk-radios__conditional"
                  >
                    <div
                      crown-court=""
                    >
                      <pdk-form-field
                        label="Select court"
                        labeltype="small"
                      >
                        <pdk-form-group
                          class="pdk-form-group"
                        >
                          <label
                            class="govuk-label govuk-label--s"
                            for="courtCentre"
                          >
                             Select court 
                          </label>
                          <cpp-organisation-unit-autosuggest
                            class="ng-untouched ng-pristine ng-valid"
                            data-role="allocate-court-centre-input"
                            name="courtCentre"
                            required=""
                          >
                            <pdk-autosuggest-lite>
                              <pdk-autosuggest
                                highlightcolor="blue"
                              >
                                <pdk-interaction-container>
                                  <div>
                                    <div
                                      class="pdk-autosuggest"
                                    >
                                      <input
                                        aria-autocomplete="list"
                                        aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                                        aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                                        aria-expanded="false"
                                        autocomplete="off"
                                        class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                                        id="courtCentre"
                                        role="combobox"
                                        type="text"
                                      />
                                      <span
                                        class="govuk-visually-hidden"
                                        id="pdk-autosuggest__instructions-GENERATED_ID"
                                        pdk-visually-hidden=""
                                      >
                                         When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                                      </span>
                                      <span
                                        aria-live="polite"
                                        class="govuk-visually-hidden"
                                        pdk-visually-hidden=""
                                        role="status"
                                      >
                                      </span>
                                      <div
                                        class="pdk-autosuggest__suggestions-container"
                                        id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                                      >
                                      </div>
                                    </div>
                                  </div>
                                </pdk-interaction-container>
                              </pdk-autosuggest>
                            </pdk-autosuggest-lite>
                          </cpp-organisation-unit-autosuggest>
                        </pdk-form-group>
                      </pdk-form-field>
                    </div>
                  </div>
                </pdk-radio-conditional>
              </div>
            </pdk-radio-group>
          </fieldset>
        </pdk-form-group>
      </pdk-form-field>
    </select-jurisdiction>
    <div
      class="actions"
    >
      <pdk-form-group
        class="pdk-form-group"
      >
        <button
          class="govuk-!-margin-bottom-0 govuk-button"
          data-test-id="select-court"
          pdk-button=""
          pdk-margin-bottom="0"
          type="submit"
        >
           Continue 
        </button>
      </pdk-form-group>
      <div
        class="govuk-!-margin-left-4"
        pdk-margin-left="4"
      >
        <a
          class="govuk-link"
          data-test-id="clear-court"
          href="javascript:void(0)"
          pdk-link=""
        >
          Clear
        </a>
      </div>
    </div>
  </form>
</select-court-form>
`;

exports[`SelectCourtFormComponent should render with magistrates jurisdiction selected 1`] = `
<select-court-form
  JurisdictionType={[Function Object]}
  courtCentre={[Function Function]}
  courtCentreChange={[Function OutputEmitterRef]}
  errors={[Function OutputEmitterRef]}
  form={[Function Function]}
  jurisdiction={[Function Function]}
  jurisdictionCode={[Function Function]}
>
  <form
    class="ng-untouched ng-pristine ng-valid"
    data-test-id="select-court-form"
    novalidate=""
    pdk-form=""
  >
    <select-jurisdiction>
      <pdk-form-field
        label="Select jurisdiction"
        labeltype="small"
      >
        <pdk-form-group
          class="pdk-form-group"
        >
          <fieldset
            class="govuk-fieldset"
            pdk-fieldset=""
          >
            <legend
              class="govuk-fieldset__legend govuk-fieldset__legend--s"
            >
               Select jurisdiction 
            </legend>
            <pdk-radio-group
              class="ng-untouched ng-pristine ng-invalid"
              name="jurisdictionType"
              required=""
            >
              <div
                class="govuk-radios"
              >
                <pdk-radio-button>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="pdk-radio-GENERATED_ID"
                      name="pdk-radio-group-GENERATED_ID"
                      type="radio"
                      value="MAGISTRATES"
                    />
                    <label
                      class="govuk-radios__label govuk-label"
                      for="pdk-radio-GENERATED_ID"
                      pdk-label=""
                    >
                      Magistrates' Court 
                    </label>
                  </div>
                </pdk-radio-button>
                <pdk-radio-conditional>
                  <div
                    class="govuk-radios__conditional"
                  >
                    <div
                      magistrates-court=""
                    >
                      <pdk-form-field
                        label="Select court"
                        labeltype="small"
                      >
                        <pdk-form-group
                          class="pdk-form-group"
                        >
                          <label
                            class="govuk-label govuk-label--s"
                            for="courtCentre"
                          >
                             Select court 
                          </label>
                          <cpp-organisation-unit-autosuggest
                            class="ng-untouched ng-pristine ng-valid"
                            data-role="allocate-court-centre-input"
                            name="courtCentre"
                            required=""
                          >
                            <pdk-autosuggest-lite>
                              <pdk-autosuggest
                                highlightcolor="blue"
                              >
                                <pdk-interaction-container>
                                  <div>
                                    <div
                                      class="pdk-autosuggest"
                                    >
                                      <input
                                        aria-autocomplete="list"
                                        aria-controls="pdk-autosuggest__suggestions-container-GENERATED_ID-listbox"
                                        aria-describedby="pdk-autosuggest__instructions-GENERATED_ID"
                                        aria-expanded="false"
                                        autocomplete="off"
                                        class="pdk-autosuggest__input ng-untouched ng-pristine ng-valid govuk-input"
                                        id="courtCentre"
                                        role="combobox"
                                        type="text"
                                      />
                                      <span
                                        class="govuk-visually-hidden"
                                        id="pdk-autosuggest__instructions-GENERATED_ID"
                                        pdk-visually-hidden=""
                                      >
                                         When autocomplete results are available, use the up and down arrows to review and Enter to select. Touch device users, explore options with swipe gestures. 
                                      </span>
                                      <span
                                        aria-live="polite"
                                        class="govuk-visually-hidden"
                                        pdk-visually-hidden=""
                                        role="status"
                                      >
                                      </span>
                                      <div
                                        class="pdk-autosuggest__suggestions-container"
                                        id="pdk-autosuggest__suggestions-container-GENERATED_ID"
                                      >
                                      </div>
                                    </div>
                                  </div>
                                </pdk-interaction-container>
                              </pdk-autosuggest>
                            </pdk-autosuggest-lite>
                          </cpp-organisation-unit-autosuggest>
                        </pdk-form-group>
                      </pdk-form-field>
                    </div>
                  </div>
                </pdk-radio-conditional>
                <pdk-radio-button>
                  <div
                    class="govuk-radios__item"
                  >
                    <input
                      class="govuk-radios__input"
                      id="pdk-radio-GENERATED_ID"
                      name="pdk-radio-group-GENERATED_ID"
                      type="radio"
                      value="CROWN"
                    />
                    <label
                      class="govuk-radios__label govuk-label"
                      for="pdk-radio-GENERATED_ID"
                      pdk-label=""
                    >
                      Crown Court 
                    </label>
                  </div>
                </pdk-radio-button>
              </div>
            </pdk-radio-group>
          </fieldset>
        </pdk-form-group>
      </pdk-form-field>
    </select-jurisdiction>
    <div
      class="actions"
    >
      <pdk-form-group
        class="pdk-form-group"
      >
        <button
          class="govuk-!-margin-bottom-0 govuk-button"
          data-test-id="select-court"
          pdk-button=""
          pdk-margin-bottom="0"
          type="submit"
        >
           Continue 
        </button>
      </pdk-form-group>
      <div
        class="govuk-!-margin-left-4"
        pdk-margin-left="4"
      >
        <a
          class="govuk-link"
          data-test-id="clear-court"
          href="javascript:void(0)"
          pdk-link=""
        >
          Clear
        </a>
      </div>
    </div>
  </form>
</select-court-form>
`;
